--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-"<h1>Hello, Quiz IT Website!</h1>" 
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Quiz IT Website</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1></h1>Trắc nghiệm kiến thức IT</h1>
+
+  <div id="quiz-container">
+    <div id="question"></div>
+    <div id="answers"></div>
+    <div id="controls">
+      <button id="next-btn">Câu tiếp theo</button>
+      <button id="restart-btn" style="display:none;">Làm lại</button>
+    </div>
+    <p id="result"></p>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
