--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🧠 <b>Trắc nghiệm kiến thức IT</b></h1>
+  <h1 class="quiz-title">🧠 Trắc nghiệm kiến thức IT</h1>
+
+<style>
+.quiz-title {
+  font-family: 'Be Vietnam Pro', 'Roboto', sans-serif;
+  font-weight: 800;
+  font-size: 2.2rem;
+  color: #1a3365;
+  text-align: center;
+  margin-top: 20px;
+}
+
+/* Import font hỗ trợ tiếng Việt */
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@600;700;800&display=swap');
+</style>
+
 
   <div id="login">
     <h2>Đăng nhập</h2>
